Fix relative paths

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 			<a class="navbar" href="/blog/">Blog</a>&nbsp;
 			<a class="navbar cartographer-bridge" href="https://github.com/michardy">GitHub</a>&nbsp;
 			<a class="navbar cartographer-bridge" href="https://www.linkedin.com/in/michael-hardy-b6143a168/">LinkedIn</a>&nbsp;
-			<a class="navbar" href="resume.html">Resume</a>&nbsp;
+			<a class="navbar" href="/resume.html">Resume</a>&nbsp;
 			<a class="navbar cartographer-feedback" href="https://cartographer.michaelbh.com/contact/portfolio$0">Contact</a>&nbsp;
-			<a class="navbar" href="privacy.html">Privacy Policy</a>&nbsp;
+			<a class="navbar" href="/privacy.html">Privacy Policy</a>&nbsp;
 		</header>
 		<main class="cardview-host">
 			
