Correction on rust 1.29 and llvm 7

--- a/graalvm-and-rust-1/index.html
+++ b/graalvm-and-rust-1/index.html
@@ -394,7 +394,8 @@ Gotham generated invalid IR.
 Rocket (after removing ring) crashed Graal with a long stack trace.
 And Iron caused Graal to segfault.
 As a side effect of this, I suspect most libraries that perform IO will not run under GraalVM's LLVM executor.</p>
-<p>Alternatively, the execution problems could be coming from the fact that my copy of Rust is using LLVM 9 while Graal is using version 7.  At some point I will have to try downgrading to Rust 1.29.</p>
+<p><del>Alternatively, the execution problems could be coming from the fact that my copy of Rust is using LLVM 9 while Graal is using version 7.  At some point I will have to try downgrading to Rust 1.29.</del>
+(There are similar issues under 1.29 nightly)</p>
 
 		</main>
 		<footer>
