--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8"/>
 		<meta http-equiv="X-Frame-Options" content="deny">
 		<meta http-equiv="X-XSS-Protection" content="1; mode=block; report=https://cartographer.michaelbh.com/impassable">
-		<!--<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content; default-src https://michaelbh.com; script-src 'sha256-T+yyVTsM1yY478w/W8qEEXy6vMiIKftZ/DeHrGzvG9M=' 'sha256-L7rohvV5RDnrMsAHjAwX2BA68HBOlrp/Kqh/G7zzRro=' https://michaelbh.com https://cartographer.michaelbh.com/js/ https://cdn.jsdelivr.net/gh/michardy/; connect-src wss://cartographer.michaelbh.com https://cartographer.michaelbh.com; style-src https://michaelbh.com https://cdn.jsdelivr.net/gh/michardy/; frame-src https://michaelbh.com https://cartographer.michaelbh.com https://us-central1-sunlit-vortex-222923.cloudfunctions.net/keystroke-dynamics-submit; img-src https://michaelbh.com https://mhardy.dev;">-->
+		<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content; default-src https://michaelbh.com; script-src https://cartographer.michaelbh.com/js/ https://cdn.jsdelivr.net/gh/michardy/; connect-src wss://cartographer.michaelbh.com https://cartographer.michaelbh.com/terraform/annotations/; style-src https://michaelbh.com https://cartographer.michaelbh.com/terraform/css/ https://cdn.jsdelivr.net/gh/michardy/; frame-src https://cartographer.michaelbh.com; img-src https://michaelbh.com https://mhardy.dev;">
 		<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<!--Fixes a wierd bug in the chrome dev tools-->
 		<meta name="viewport" content="width=device-width"/>
@@ -40,21 +40,33 @@
 		<meta name="description" content="A blog about programming and computer security">
 		<meta name="cartographer-map-id" content="blog$0@portfolio$0">
 		<meta name="referrer" content="strict-origin-when-cross-origin">
+		<style>
+			.terraformed {
+				opacity: 0;
+			}
+		</style>
+		<noscript>
+			<style>
+				.terraformed {
+					opacity: 1 !important;
+				}
+			</style>
+		</noscript>
 	</head>
 	<body class="cardview-page">
 		<div class="card mid-light popover" id="popover"></div>
 		<header>
-			<h1><a href="/">Michael Hardy</a>&nbsp;<a href="/blog/">/blog/</a></h1>
-			<a class="navbar" href="/blog/">Blog</a>&nbsp;
-			<a class="navbar cartographer-bridge" href="https://github.com/michardy">GitHub</a>&nbsp;
-			<a class="navbar cartographer-bridge" href="https://www.linkedin.com/in/michael-hardy-b6143a168/">LinkedIn</a>&nbsp;
-			<a class="navbar" href="/resume.html">Resume</a>&nbsp;
-			<a class="navbar cartographer-feedback" href="https://cartographer.michaelbh.com/contact/portfolio$0">Contact</a>&nbsp;
-			<a class="navbar" href="/privacy.html">Privacy Policy</a>&nbsp;
+			<h1><a href="/">Michael&nbsp;Hardy</a>&ensp;<a href="/blog/">/blog/</a></h1>
+			<a class="navbar" href="/blog/">Blog</a>&ensp;
+			<a class="navbar cartographer-bridge" href="https://github.com/michardy">GitHub</a>&ensp;
+			<a class="navbar cartographer-bridge" href="https://www.linkedin.com/in/michael-hardy-b6143a168/">LinkedIn</a>&ensp;
+			<a class="navbar" href="/resume.html">Resume</a>&ensp;
+			<a class="navbar cartographer-feedback" href="https://cartographer.michaelbh.com/contact/portfolio$0">Contact</a>&ensp;
+			<a class="navbar" href="/privacy.html">Privacy&nbsp;Policy</a>
 		</header>
 		<main class="cardview-host">
 			
-				<article id="article-blurb-graalvm-and-rust-1" class="card mid-light cartographer-lot" data-display="false" data-version="0">
+				<article id="article-blurb-graalvm-and-rust-1" class="card mid-light cartographer-lot terraformed" data-display="false" data-version="0">
 					<a href="https:&#x2F;&#x2F;michaelbh.com&#x2F;blog&#x2F;graalvm-and-rust-1&#x2F;"><h2 class="title">Running Rust Crates in GraalVM&#x27;s LLVM Bitcode Executor</h2></a>
 					<div>
 						
@@ -86,6 +98,7 @@ While the code in this post does compile and run, it is heav…</p>
 			</div>
 		</footer>
 	</body>
+	<script src="https://cartographer.michaelbh.com/js/t.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/michardy/grid-ui@6/js/grid_window.min.js"></script>
 	<script src="https://cartographer.michaelbh.com/js/c.js"></script>
 </html>
